# FL-Studio-RP

./: .gitignore  CMakeLists.txt  discord_client.py  installer.nsi  template.md  usualCMakeLists.txt
docs/: README.md  instructions.md  template.md
public/: app.rc
python/: device_FLRP.py
src/: app_state.cpp  app_state.h  config.cpp  config.h  debug_test_monitor.cpp  discord_rp.cpp  discord_rp.h  main.cpp  main2.cpp  monitor.cpp  monitor.h  parser.cpp  parser.h  test_config.cpp  tray.cpp  tray.h
src/python/: instructions.md
